# strap

./: Cargo.toml  DESIGN.md  README.md  TODO.md
.github/workflows/: general.yml
src/: cli.rs  config.rs  error.rs  executor.rs  fs.rs  lib.rs  main.rs  util.rs
src/args/: mod.rs  project_name.rs  strap_args.rs  strap_config_path.rs  strap_name.rs
src/domain/: mod.rs  project_name.rs  step.rs  strap.rs  strap_context.rs  strap_task.rs
tests/: cli.rs
tests/fixtures/: valid_config.yaml
