[package]
name = "strap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.154", features = ["derive"]}
serde_yaml = "0.9"
unicode-segmentation = "1.10.1"
clap = {version="4.4.1",features=["string"]}

[dev-dependencies]
claim = "0.5.0"
assert_cmd = "2.0.11"
predicates = "3.0.3"
